# desmag

./: .gitignore  .vimprj  .vimprj_doc  Makefile.am  README  README.md  configure.ac  libdesmag.pc.in
doc/design/: desmag_design.xml  desmag_elem.odg
doc/requirements/: desmag_req.xml
src/: Makefile.am  chromo.cpp  chromo.h  chromox.cpp  chromox.h  elem.cpp  elem.h  env.cpp  env.h  mchromo.h  melem.h  menv.h  mplugin.h  mprov.h  prov.cpp  prov.h  provdef.cpp  provdef.h  provmgr.cpp  provmgr.h  uri.cpp  uri.h
test/: Makefile.am  ut_base.cpp  ut_cre_1.xml
